--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -22,7 +22,7 @@ jobs:
 
             - run: |
 
-                  curl -s https://innovators.netlify.app/ | grep Dimension || curl -X POST https://api.twilio.com/2010-04-01/Accounts/$TWILIO_ACCOUNT_SID/Calls.json \
+                  curl -s https://innovators.netlify.app/ | grep aabbcc || curl -X POST https://api.twilio.com/2010-04-01/Accounts/$TWILIO_ACCOUNT_SID/Calls.json \
 
                   --data-urlencode "Twiml=<Response><Say>Hey there. Message from Site Health Check. It looks like your website is down. Have a look at https://innovators.netlify.app/. Thank you</Say></Response>" \
 
